--- a/client/route/index.html
+++ b/client/route/index.html
@@ -70,7 +70,7 @@
 				<td>
 					<div>Платформа:&nbsp;
 						{{#platform}}
-							<a href="https://www.openstreetmap.org/node/{{platform.id}}" target="_blank">{{platform.tags.name:ru}}</a>
+							<a href="https://www.openstreetmap.org/{{platform.type}}/{{platform.id}}" target="_blank">{{platform.tags.name:ru}}</a>
 						{{/platform}}
 						{{^platform}}
 							None
@@ -78,7 +78,7 @@
 					</div>
 					<div>Точка остановки:&nbsp;
 						{{#stopPosition}}
-							<a href="https://www.openstreetmap.org/node/{{stopPosition.id}}" target="_blank">{{stopPosition.tags.name:ru}}</a>
+							<a href="https://www.openstreetmap.org/{{stopPosition.type}}/{{stopPosition.id}}" target="_blank">{{stopPosition.tags.name:ru}}</a>
 						{{/stopPosition}}
 						{{^stopPosition}}
 							None
@@ -86,7 +86,7 @@
 					</div>
 					<div>Перемычка:&nbsp;
 						{{#entrancePass}}
-							<a href="https://www.openstreetmap.org/way/{{entrancePass.id}}" target="_blank">{{entrancePass.id}}</a>
+							<a href="https://www.openstreetmap.org/{{entrancePass.type}}/{{entrancePass.id}}" target="_blank">{{entrancePass.id}}</a>
 						{{/entrancePass}}
 						{{^entrancePass}}
 							None
