Improve stops validation

--- a/client/route/index.html
+++ b/client/route/index.html
@@ -156,6 +156,8 @@
 		<p class="no-js-show"><a href="{{generateOSMLink}}" data-edit="josm" target="_blank">Сгенерировать маршрут</a></p>
 		<p class="no-js-hide"><button href="{{generateOSMLink}}" data-edit="josm" target="_blank">Сгенерировать маршрут</button></p>
 	{{/noMappedStops}}
+
+	<a style="float: right;" href="https://github.com/Semigradsky/minsktrans-api" target="_blank">https://github.com/Semigradsky/minsktrans-api</a>
 </body>
 
 	<script>
