--- a/client/routes/index.html
+++ b/client/routes/index.html
@@ -153,5 +153,6 @@
 		</table>
 	</details>
 
+	<a style="float: right;" href="https://github.com/Semigradsky/minsktrans-api" target="_blank">https://github.com/Semigradsky/minsktrans-api</a>
 </body>
 </html>
