--- a/client/stops/index.html
+++ b/client/stops/index.html
@@ -150,6 +150,8 @@
 		</table>
 	</div>
 
+	<a style="float: right;" href="https://github.com/Semigradsky/minsktrans-api" target="_blank">https://github.com/Semigradsky/minsktrans-api</a>
+
 	<script>
 		var showAllInput = document.querySelector('#showAll');
 		var stopsTable = document.querySelector('#stops-table');
