--- a/client/route/index.html
+++ b/client/route/index.html
@@ -75,6 +75,7 @@
 	<p><a href="/stops">&lt;&lt;&lt; Все остановки</a></p>
 	<p><a href="/routes">&lt;&lt;&lt; Все маршруты</a></p>
 	<h1>{{name}}</h1>
+	<p><a target="_blank" href="http://www.minsktrans.by/city/#minsk/bus;{{route.id}}">Минсктранс</a></p>
 	<table>
 		<thead>
 			<th>ref:minsktrans</th>
