Add disused routes

--- a/client/routes/index.html
+++ b/client/routes/index.html
@@ -27,6 +27,9 @@
 	tr:hover {
 		background: #d7d7f4;
 	}
+	.disused {
+		background: #f3dada;
+	}
 	</style>
 </head>
 <body>
@@ -57,14 +60,14 @@
 					</td>
 					<td>
 						{{#_routes}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routes}}
 					</td>
 					<td>
 						{{#_routesMasters}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routesMasters}}
@@ -99,14 +102,14 @@
 					</td>
 					<td>
 						{{#_routes}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routes}}
 					</td>
 					<td>
 						{{#_routesMasters}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routesMasters}}
@@ -141,14 +144,14 @@
 					</td>
 					<td>
 						{{#_routes}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routes}}
 					</td>
 					<td>
 						{{#_routesMasters}}
-						<div>
+						<div {{#disused}}class="disused"{{/disused}}>
 							<a href="https://www.openstreetmap.org/relation/{{id}}" target="_blank">{{name}}</a>
 						</div>
 						{{/_routesMasters}}
